<resources>
    <string name="app_name">roomdatabase</string>

    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="login">Login</string>
    <string name="save_user">Save User</string>
    <string name="update">Update</string>
    <string name="do_you_have_an_account">Do you have an account ?</string>
    <string name="dont_have_an_account">You don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="delete_records">Delete Records!</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to Delete?</string>
    <string name="update_profile">Update Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>