<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_bold"
                android:text="@string/delete_records"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/metropolis_regular"
                android:text="@string/are_you_sure_you_want_to_delete"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYes"
                style="@style/ButtonTheme.Primary700"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/yes"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/ButtonTheme.Secondary"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnYes"
                app:layout_constraintTop_toTopOf="@+id/btnYes" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>